--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "homepage": "https://github.com/saiarvindg/daemondash2017#readme",
   "dependencies": {
+    "body-parser": "^1.16.0",
+    "express": "^4.14.0",
     "moment": "^2.17.1",
     "unirest": "^0.5.1"
   }
