--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "body-parser": "^1.16.0",
     "express": "^4.14.0",
+    "jquery": "^3.1.1",
     "moment": "^2.17.1",
     "unirest": "^0.5.1"
   }
