--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "daemondash2017",
   "version": "1.0.0",
   "description": "collaborative schedule creater   asdf Test commit from one of the commandoes",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
